# image2text

./: README.md
image2text/: pyproject.toml
image2text/image2text/: .env  app.py  audio.flac
