[tool.poetry]
name = "image2text"
version = "0.1.0"
description = ""
authors = ["pchebolu <pchebolu@deloitte.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.32.0"
langchain = "^0.0.271"
requests = "^2.31.0"
openai = "^0.27.9"
streamlit = "^1.25.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
